--- a/group-info/report.css
+++ b/group-info/report.css
@@ -90,6 +90,11 @@ a {
   text-align: center;
 }
 
+.center pre {
+    display: inline-block;
+    text-align: left;
+   }
+
 h1,
 h2,
 h3,
@@ -155,6 +160,12 @@ blockquote {
   margin: 20px 0;
   padding-left: 1.5rem;
   border-left: 5px solid #9e1b32;
+}
+
+.side-by-side {
+  display: inline-block;
+  vertical-align: top;
+  margin: 0 5rem;
 }
 
 table,
